--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Compendio de blogs guardados para su lectura posterior",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=testing node --test",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -22,8 +22,10 @@
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@stylistic/eslint-plugin-js": "^2.11.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
