--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=testing node --test",
+    "test:start": "cross-env NODE_ENV=testing node index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
